Make a simple squeme for the calculator

--- a/index.html
+++ b/index.html
@@ -6,9 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>TOP calculator TOP</title>
+    <title>TOP Calculator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display">123</div>
+        <div class="buttons">
+            <div class="clear-delete">
+                <button>CLEAR</button>
+                <button>DELETE</button>
+            </div>
+            <div class="operators">
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>÷</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>x</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>-</button>  
+                <button>.</button>
+                <button>0</button>
+                <button>=</button>
+                <button>+</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
