--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 </head>
 <body>
     <div class="container">
-        <div class="display">123</div>
+        <div id="display"></div>
         <div class="buttons">
             <div class="clear-delete">
-                <button>CLEAR</button>
-                <button>DELETE</button>
+                <button id="clear">CLEAR</button>
+                <button id="clear">DELETE</button>
             </div>
             <div class="operators">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>÷</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>x</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>-</button>  
-                <button>.</button>
-                <button>0</button>
-                <button>=</button>
-                <button>+</button>
+                <button class="numero" id="seven" value="7">7</button>
+                <button class="numero" id="eight" value="8">8</button>
+                <button class="numero" id="nine" value="9">9</button>
+                <button id="divide" value="divide">÷</button>
+                <button class="numero" id="four" value="4">4</button>
+                <button class="numero" id="five" value="5">5</button>
+                <button class="numero" id="six" value="6">6</button>
+                <button id="multiply" value="multiply">x</button>
+                <button class="numero" id="one" value="1">1</button>
+                <button class="numero" id="two" value="2">2</button>
+                <button class="numero" id="three" value="3">3</button>
+                <button id="substract" value="substract">-</button>  
+                <button id="dot" value=".">.</button>
+                <button class="numero" id="zero" value="0">0</button>
+                <button id="equal" value="equal">=</button>
+                <button id="add" value="add">+</button>
             </div>
         </div>
     </div>
