--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 <button class="numero" id="seven" value="7">7</button>
                 <button class="numero" id="eight" value="8">8</button>
                 <button class="numero" id="nine" value="9">9</button>
-                <button id="divide" value="divide">÷</button>
+                <button class="operador" id="divide" value="divide">÷</button>
                 <button class="numero" id="four" value="4">4</button>
                 <button class="numero" id="five" value="5">5</button>
                 <button class="numero" id="six" value="6">6</button>
-                <button id="multiply" value="multiply">x</button>
+                <button class="operador" id="multiply" value="multiply">x</button>
                 <button class="numero" id="one" value="1">1</button>
                 <button class="numero" id="two" value="2">2</button>
                 <button class="numero" id="three" value="3">3</button>
-                <button id="substract" value="substract">-</button>  
+                <button class="operador" id="substract" value="substract">-</button>  
                 <button id="dot" value=".">.</button>
                 <button class="numero" id="zero" value="0">0</button>
                 <button id="equal" value="equal">=</button>
-                <button id="add" value="add">+</button>
+                <button class="operador" id="add" value="add">+</button>
             </div>
         </div>
     </div>
