Add some styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="numero" id="two" value="2">2</button>
                 <button class="numero" id="three" value="3">3</button>
                 <button class="operador" id="substract" value="substract">-</button>  
-                <button id="dot" value=".">.</button>
+                <button class="numero" id="dot" value=".">.</button>
                 <button class="numero" id="zero" value="0">0</button>
                 <button id="equal" value="equal">=</button>
                 <button class="operador" id="add" value="add">+</button>
